paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/fun_decl_1/sample_004/target.compile.log
error[E0277]: `RefCell<[i32; 4]>` cannot be shared between threads safely
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/fun_decl_1/sample_004/target.rs:3:16
  |
3 | static GSTORE: RefCell<[i32; 4]> = RefCell::new([0, 0, 0, 0]);
  |                ^^^^^^^^^^^^^^^^^ `RefCell<[i32; 4]>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `RefCell<[i32; 4]>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
  = note: shared static variables must have a type that implements `Sync`

error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/fun_decl_1/sample_004/target.rs:37:14
   |
37 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.